base setup included

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 *.ear
 /RobotBlueTwilight2013Drive/nbproject/private/
 /RobotBlueTwilight2013Drive/build/
+/RobotBlueTwilight2013Climb/build/
+/RobotBlueTwilight2013Climb/nbproject/private/
