--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /RobotBlueTwilight2013Drive/build/
 /RobotBlueTwilight2013Climb/build/
 /RobotBlueTwilight2013Climb/nbproject/private/
+/RobotBlueTwilight2013Final/build/
