--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /RobotBlueTwilight2013Climb/build/
 /RobotBlueTwilight2013Climb/nbproject/private/
 /RobotBlueTwilight2013Final/build/
+/RobotBlueTwilight2013Shooter/nbproject/private/
