--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.jar
 *.war
 *.ear
+*.xml
 /RobotBlueTwilight2013Drive/nbproject/private/
 /RobotBlueTwilight2013Drive/build/
 /RobotBlueTwilight2013Climb/build/
