--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /RobotBlueTwilight2013Climb/nbproject/private/
 /RobotBlueTwilight2013Final/build/
 /RobotBlueTwilight2013Shooter/nbproject/private/
+/Robot2013Final/nbproject/
